add bert training

--- a/src/testing.ipynb
+++ b/src/testing.ipynb
@@ -6,17 +6,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data_processing.ev_parser import create_dataloader\n",
-    "\n"
+    "from config import config\n",
+    "from train import train\n",
+    "from models.bert import BertClassifier\n",
+    "from data_processing.ev_parser import create_dataloader\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1066"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dl = create_dataloader(8)"
+    "conf = config.multilabel_base()\n",
+    "dl = create_dataloader(conf)\n",
+    "len(dl)"
    ]
   },
   {
@@ -25,27 +40,65 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[\"Clean spot. Charged on the 13th. They are installing a DC fast charge but the software wasn't ready. Level 2 chargers work fine.\",\n",
-       " 'Bring quarters, meter is $0.25/3 minutes.\\nCharger is around the back of the building. On state street',\n",
-       " 'Convenient but expensive.',\n",
-       " 'CHAdeMO',\n",
-       " \"Half the bays occupied by gas-cars, apparently Grove doesn't enforce EV parking signs ... \",\n",
-       " '.49cts per kw even when we are buying stuff inside.',\n",
-       " 'Need to call and make reservation in advance by calling 888-758-4389.  Easy access but you need to call before you can use it with your Chargepoint acct.',\n",
-       " 'Glad to see this station in the area ']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at prajjwal1/bert-tiny were not used when initializing BertModel: ['cls.predictions.decoder.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.bias']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "  0%|          | 0/1066 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0/1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  7%|▋         | 79/1066 [00:14<05:04,  3.24it/s, loss=0.694]"
+     ]
     }
    ],
    "source": [
-    "data = next(iter(dl))\n",
+    "conf = config.multilabel_base()\n",
+    "model = BertClassifier(config=conf.bert) \n",
+    "train(config=conf, model=model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.6725\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
     "\n",
-    "data['review_text']"
+    "validation_loader = create_dataloader(conf, 'test')\n",
+    "criterion = nn.BCEWithLogitsLoss()\n",
+    "\n",
+    "model.eval() \n",
+    "val_loss = 0\n",
+    "with torch.no_grad():\n",
+    "  for batch in validation_loader:\n",
+    "    output = model(input_id=batch['input_ids'], mask=batch['attention_mask'])\n",
+    "    val_loss += criterion(output, batch['label'])\n",
+    "# total loss - divide by number of batches\n",
+    "val_loss = val_loss / len(validation_loader)\n",
+    "print('Test Loss: {:.4f}'.format(val_loss))"
    ]
   }
  ],
